--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,9 @@ html,
 body,
 #root {
   margin: 0;
-  min-height: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 body {
